--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "ali-oss": "^6.16.0",
     "core-js": "^3.6.5",
     "element-ui": "^2.15.5",
+    "gsap": "^2.1.2",
     "less": "^3.0.4",
     "less-loader": "^4.1.0",
-    "gsap": "^2.1.2",
     "vue": "^2.6.11",
     "vue-i18n": "^8.11.2",
     "vue-lottie": "^0.2.1",
